[metadata]
name = fill_voids
url = https://github.com/seung-lab/fill_voids/
summary = Fill voids in 3D binary images fast.
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/fill_voids/
license = GPLv3+
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = fill_voids

[wheel]
universal = 0