[metadata]
name = fill_voids
url = https://github.com/seung-lab/fill_voids/
summary = Fill voids in 3D binary images fast.
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/fill_voids/
license = LGPL-3.0-or-later
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = fill_voids

[bdist_wheel]
universal = 1